@@ -1,3 +1,11 @@
+2007-09-23  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.h
+	  src/gconf-helpers/gconf-helpers.c
+	  src/applet-dbus-settings.c
+		- (nm_gconf_write_connection): new function; move code that writes an
+			NMConnection to GConf into the GConf helpers common code
+
 2007-09-21  Dan Williams  <dcbw@redhat.com>
 
 	* src/password-dialog.c
